--- a/inst/tutorials/sampling/sampling.Rmd
+++ b/inst/tutorials/sampling/sampling.Rmd
@@ -147,29 +147,40 @@ Let's try to reconstruct where the polls from the famous 1948 presidential elect
 
 ```{r truman}
 popn_props <- poll_props <- intend_truman <-
-  array(dim = c(3, 2), dimnames = list(demographic = 1:3, has_phone = 0:1))
+  structure(array(dim = c(3, 2),
+      dimnames = list(demographic = 1:3, has_phone = 0:1)),
+    class = "truman")
 
 popn_props[] <- cbind(c(5, 25, 20), c(20, 25, 5)) / 100
 intend_truman[] <- cbind(c(30, 50, 70), c(30, 50, 70)) / 100
 vote_truman <- intend_truman + 0.05
+plot.truman <- function(x, y, ...) {
+  fr <- CJ(demographic = 1:3, has_phone = factor(0:1))
+  fr[has_phone == "0", propn := x[, "0"]]
+  fr[has_phone == "1", propn := x[, "1"]]
+  ggplot(fr, aes(x = demographic, fill = has_phone, y = propn)) + geom_bar(stat = "identity", position = "dodge")
+} 
 ```
 
 Run this code block to show population proportions in different groups.
 
 ```{r population, exercise = TRUE, exercise.setup = "truman"}
 popn_props
+plot(popn_props)
 ```
 
 And this next code block shows the probability of voting for Harry Truman within each of these groups (`intend_truman`), at some point shortly before the election actually took place. You'll notice that voting intentions don't vary with phone ownership, but do vary by demographic.
 
 ```{r intentions, exercise = TRUE, exercise.setup = "truman"}
 intend_truman
+plot(intend_truman)
 ```
 
 The Chicago Daily Tribune might have been expecting a dip in support for Truman, but actually he got a late boost. Modify the next chunk of code to reflect this.
 
 ```{r vote, exercise = TRUE, exercise.setup = "truman"}
 vote_truman <- intend_truman - 0.05 # modify this line to give Truman a late 5% boost
+plot(vote_truman)
 
 sum(popn_props * intend_truman) # hypothetical early vote
 sum(popn_props * vote_truman) # actual vote
