--- a/inst/tutorials/sampling/sampling.Rmd
+++ b/inst/tutorials/sampling/sampling.Rmd
@@ -9,6 +9,7 @@ library(learnr)
 library(data.table)
 library(ggplot2)
 library(magrittr)
+library(recolorize)
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
@@ -325,6 +326,18 @@ The protaganist Zach concludes (p120, at least in the first edition):
 When asked *how large is a large sample*, Milton the cat / professor replies:
 
 > 'That very much depends on the situation, but for now, just focus on the idea that with samples bigger is better. The same cannot be said for dogs.'
+
+```{r hidden_dragon}
+bookworm <- readImage("images/Conversation_With_Smaug.png", resize = NULL, rotate = NULL)
+masked <- bookworm 
+```
+
+```{r crouching_burglar, exercise = TRUE, exercise.setup = "hidden_dragon"}
+n_hidden <- 150  # change this to different values
+masked[sample(1:308, n_hidden), , ] <- 1
+masked[, sample(1:240, n_hidden), ] <- 1
+plotImageArray(masked)
+```
 
 ## Standard error
 
